--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -43,7 +43,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/images/IMG_20220709_175204.jpg" alt="" style="height: 440px; width: 440px; background-size: cover; background-repeat: no-repeat; border-radius: 10px 10px 10px 10px; margin-left: 50px;">
+            <img src="./images/IMG_20220709_175204.jpg" alt="" style="height: 440px; width: 440px; background-size: cover; background-repeat: no-repeat; border-radius: 10px 10px 10px 10px; margin-left: 50px;">
         </div>
         <div class="about-text">
             <h2>About <span>Me</span></h2>
@@ -204,7 +204,7 @@
 
                 <div class="portfolio-content">
                     <div class="row">
-                        <img src="/images/kevin-ku-w7ZyuGYNpRQ-unsplash.jpg" alt="">
+                        <img src="./images/kevin-ku-w7ZyuGYNpRQ-unsplash.jpg" alt="">
                         <div class="layer">
                             <h5 style="color: #00eeff;">Award Winning Webpage</h5>
                             <p>Welcome to the award-winning website crafted with precision using HTML, CSS, and JavaScript. Experience seamless navigation, stunning animations, and captivating styles as you explore a world of culinary delights, and endless fun. Experience a visually stunning and user-friendly website, offering engaging animations.Frontend Development covering domains of HTML, CSS, JavaScript.</p>
@@ -213,7 +213,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="/images/lee-campbell-DtDlVpy-vvQ-unsplash.jpg" alt="" >
+                        <img src="./images/lee-campbell-DtDlVpy-vvQ-unsplash.jpg" alt="" >
                         <div class="layer">
                             <h5 style="color: #00eeff;">Arrhythmia Disease Prediction <span style="color: red;">(Ongoing)</span></h5>
                             <p>Trained a machine learning model for Arrhythmia Disease prediction. Accuracy of 98% was achieved by training the model. The project involved data analysis, algorithm selection, and comparative analysis for robust performance. The results were documented comprehensively, highlighting my ability to apply machine learning in medical contexts.</p>
@@ -222,7 +222,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="/images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="" >
+                        <img src="./images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="" >
                         <div class="layer">
                             <h5 style="color: #00eeff;">Netflix/Amazon Clone</h5>
                             <p>Structuring the content with HTML elements. </p>
