--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -49,7 +49,7 @@
 
     <section class="about" id="about">
         <div class="about-img">
-            <img src="/images/IMG_20220709_175204.jpg" alt=""
+            <img src="./images/IMG_20220709_175204.jpg" alt=""
                 style="height: 440px; width: 440px; background-size: cover; background-repeat: no-repeat; border-radius: 10px 10px 10px 10px; margin-left: 50px;">
         </div>
         <div class="about-text">
@@ -235,7 +235,7 @@
 
                 <div class="portfolio-content">
                     <div class="row">
-                        <img src="/images/kevin-ku-w7ZyuGYNpRQ-unsplash.jpg" alt="">
+                        <img src="./images/kevin-ku-w7ZyuGYNpRQ-unsplash.jpg" alt="">
                         <div class="layer">
                             <h5 style="color: #00eeff;">Award Winning Webpage</h5>
                             <p>Welcome to the award-winning website crafted with precision using HTML, CSS, and
@@ -248,7 +248,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="/images/lee-campbell-DtDlVpy-vvQ-unsplash.jpg" alt="">
+                        <img src="./images/lee-campbell-DtDlVpy-vvQ-unsplash.jpg" alt="">
                         <div class="layer">
                             <h5 style="color: #00eeff;">Food Delivery Web Application</h5>
 
@@ -259,7 +259,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <img src="/images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="">
+                        <img src="./images/ales-nesetril-Im7lZjxeLhg-unsplash.jpg" alt="">
                         <div class="layer">
                             <h5 style="color: #00eeff;">Netflix/Amazon Clone</h5>
                             <p>Structuring the content with HTML elements. </p>
